--- a/static/themes/rosepine-dawn.css
+++ b/static/themes/rosepine-dawn.css
@@ -29,7 +29,7 @@
 }
 
 .rose-pine-dawn #chat-textarea {
-    background: #ffffff;
+	background: rgb(255 243 242 / 67%);
     margin: 0.3rem;
     padding: 0.5rem;
 }
